	- Fix bad PG_INTEGER example in docs, thanks to Xavi Drudis Ferran.
		(CPAN bug #31545) [GSM]
	- Force SQL_REAL and SQL_NUMERIC to be float8 not float4.
		(CPAN bug #30010) [GSM]
	- Fix memory leak when using savepoints. (CPAN bug #29791)
		[airwave@cpan.org]
	- Allow data_sources to accept optional arguments. [GSM]
	- Change versioning system to three numbered system.
	- Add support for arrays: can pass in arrayrefs to execute, and 
		they are automatically returned as arrays when fetching. [GSM]
	- Overhauled the data type system. [GSM]
	- Fix bug in last_insert_id. (CPAN bug #15918) [orentocy@gmail.com]
	- Complain loudly and fail to proceed if Makefile.PL finds no -lpq [GSM]
	- Fix META.yml file. (CPAN bug #25759) [GSM]
	- Force column names to respect utf8-ness. Per report from Ch Lamprect. [GSM]
	- Add support for asynchronous queries. [GSM]
	- Make minimum supported server 7.4. [GSM]
	- Add private_attribute_info() method. [GSM]
	- Add SQL_INTERVAL and others to types.c [GSM]
	- Change $dbh->{Name} to return the entire DSN string, minus the 
		'dbi:Pg:' part. Thanks to Mark Stosberg for the idea. [GSM]
	- Add $dbh->{pg_placeholder_dollaronly} to allow '?' and other symbols 
		to be used in prepared statements without getting interpreted as 
		placeholders, i.e. the geometric operator '?#' (CPAN bug #24124) [GSM]
	- Use prepare_cached in last_insert_id function. (CPAN bug #24313)
	- Switch from cvs to subversion. Switch from gborg to perl.org.
	- Fix pg_description join in table_info(). [Max Cohan max@endpoint.com]
	- Fix memory leak in bytea quoting. (CPAN bug #21392). Fix memory leak 
		in pg_notifies. [Stephen Marshall smarshall@wsi.com]
	- Added statistics_info function [Brandon Black blblack@gmail.com]

1.49 May 7, 2006
	- Thanks to Backcountry.com for sponsoring work on this release. [GSM]
	- Add the statement handle attribute ParamTypes, and fix an error 
		in ParamValues. ParamTypes requires DBI 1.49 or better. [GSM]